services/monitoring-stack/alertmanager/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: vault-issuer
    cert-manager.io/duration: "720h"
    cert-manager.io/renew-before: "168h"
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      protocol: HTTP
      port: 8000
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 8443
      hostname: alertmanager.CHANGEME_DOMAIN
      tls:
        mode: Terminate
        certificateRefs:
          - name: alertmanager-CHANGEME_DOMAIN_DASHED-tls
      allowedRoutes:
        namespaces:
          from: Same
