services/monitoring-stack/alertmanager/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  parentRefs:
    - name: alertmanager
      namespace: monitoring
      sectionName: https
  hostnames:
    - "alertmanager.CHANGEME_DOMAIN"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: basic-auth-alertmanager
      backendRefs:
        - name: alertmanager
          port: 9093
